tests/spec/fail/func_typed_param_mismatch.aja
fuc bad(cb: func(int) -> int) -> int:
    return cb(1)

fuc echo(s: str) -> str:
    return s

print(bad(echo))
